調整基本 jade 結構

--- a/app/index.jade
+++ b/app/index.jade
@@ -1,4 +1,4 @@
-extends ./template/_head.jade
+extends ./template/_layout.jade
 
 block title
   title DEMO | index
@@ -7,8 +7,3 @@ block content
   h1 hi~
 
   h2 113123
-
-  p
-    +icon('musdm')
-    +icon('thenewslens')
-
