--- a/app/template/_layout.jade
+++ b/app/template/_layout.jade
@@ -5,7 +5,7 @@ include ./_mixin.jade
 html(lang="zh-Hant-TW")
 head
   meta(charset="UTF-8")
-  link(rel="stylesheet", href="./styles/style.css")
+  link(rel="stylesheet", href="/styles/style.css")
   block title
     title DEMO
 body
