add bp scss-helper for > desktop

--- a/app/styles/_mixin.scss
+++ b/app/styles/_mixin.scss
@@ -10,8 +10,8 @@
   }
 }
 
-@mixin bp-desktop {
-  @media (max-width: #{$w-desktop}) {
+@mixin bp-desktop--up {
+  @media (min-width: #{$w-desktop + 1px}) {
     @content;
   }
 }
