改用自己設定的 line-height

--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,6 +1,11 @@
 @import "../../node_modules/normalize-scss/sass/_normalize.scss";
 @include normalize();
 
+:root {
+  line-height: 1.5;
+  box-sizing: border-box;
+}
+
 body {
   background-color: $main-bgc;
   color: $main-color;
