--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   background-color: $main-bgc;
   color: $main-color;
