--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -6,6 +6,7 @@ $c-white: #fff;
 $c-black: #000;
 $c-pink: #e63082;
 $c-gray: #aaa;
+$c-white-o5: rgba($c-white, .5);
 
 $main-bgc: lighten($c-black, 5.5%);
 $main-color: $c-white;
