調整 footer spacing

--- a/app/template/_footer.jade
+++ b/app/template/_footer.jade
@@ -1,5 +1,5 @@
 footer.footer.text-center
-  .team.pb3
+  .team.mb6
     h3.team__title.text-white-o5.mb6 政問團隊
     ul.team__members.list-reset.mb6
       each menber in appInfo.teamMember
