調整 footer spacing

--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -13,6 +13,12 @@
   }
 }
 
+.team {
+  @include bp-pad--up {
+    margin-bottom: 1.5rem;
+  }
+}
+
 .team__title {
   display: inline-block;
   padding-bottom: px2rem(3);
