--- a/app/styles/_c-slider.scss
+++ b/app/styles/_c-slider.scss
@@ -22,27 +22,16 @@
     max-width: 4rem;
     height: auto;
     pointer-events: none;
+
+    @include bp-pad--up {
+      max-width: none;
+    }
   }
 }
 
-.slider-body {
-  position: relative;
-  height: 90vh;
-  min-height: 27.5rem;
-  max-height: 45rem;
-}
-
-.slider-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-position: 50%;
-  background-size: cover;
-}
-
 .share-btns {
+  font-size: .5rem;
+  line-height: 1;
   opacity: .5;
   transition: opacity 5s;
 
@@ -71,6 +60,32 @@
     width: 1.5rem;
     height: 1.5rem;
     fill: currentcolor;
+  }
+}
+
+.slider-body {
+  position: relative;
+  height: 90vh;
+  min-height: px2rem(440);
+  max-height: 45rem;
+
+  @include bp-desktop--up {
+    min-height: px2rem(640);
+  }
+}
+
+.slider-content {
+  @include fill-full;
+  background-position: 50%;
+  background-size: cover;
+}
+
+.slider-link {
+  @include fill-full;
+  background-image: linear-gradient(to bottom, transparent, rgba($main-bgc, .1), $main-bgc);
+
+  @include bp-pad--up {
+    background: rgba($main-bgc, .25);
   }
 }
 
