--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -13,6 +13,14 @@ section.slider.mxa
       if program.program_topic
         div.slider-content(style="background-image: url('/images/slider/program#{program.program_number_full}_thumb.jpg')")
           a.slider-link(href="/talk/#{program.program_number_full}.html")
+          .container
+            .program-info
+              .program__guest.text-pink=program.guest
+              .program__title!=program.title.replace(/，/, '<br>')
+              time.program__time.text-gray 12 月 23 日（三）21:00 – 21:30
+              if program.polis_result
+                a.program__link.px3(href="###", title="觀看節目彙整 →") 觀看節目彙整 →
+              .program__number.text-pink.text-right=program.program_number_full
 
   .slider-foot.mxa
     ul.slider-thumbs.list-reset
