--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -3,10 +3,8 @@ section.slider.mxa
     .container
       img.logo.logo--index.float-right(src="/images/logo/logo.svg", alt="政問 logo", width="102", height="128")
       .share-btns.float-left
-        a.share-btn.share-btn--facebook
-          +svg-icon('sns-facebook')
-        a.share-btn.share-btn--twitter
-          +svg-icon('sns-twitter')
+        +sns-facebook('###')
+        +sns-twitter('###')
 
   .slider-body
     each program, index in programs
