--- a/app/styles/_mixin.scss
+++ b/app/styles/_mixin.scss
@@ -23,3 +23,11 @@
   right: 0;
   bottom: 0;
 }
+
+@mixin clearfix() {
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
