--- a/app/styles/_p-intro.scss
+++ b/app/styles/_p-intro.scss
@@ -1,7 +1,7 @@
 // .container.introduce
 .introduce {
   width: 80%;
-  max-width: 45rem;
+  max-width: px2rem(768);
 
   @include bp-pad--up {
     padding-top: 3rem;
@@ -9,6 +9,7 @@
   };
 
   @include bp-desktop--up {
+    max-width: px2rem(1080);
     padding-top: 4.5rem;
     padding-bottom: 4.5rem;
   };
@@ -18,6 +19,10 @@
 
     @include bp-desktop--up {
       font-size: 1.5rem;
-    };
+    }
+
+    p {
+      margin-bottom: 1em;
+    }
   }
 }
