--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,5 +1,7 @@
-// colors:
+// fonts
+$number-font: "Gotham SSm A", "Gotham SSm B", "source-han-sans-traditional", sans-serif;
 
+// colors:
 $c-white: #fff;
 $c-black: #000;
 $c-pink: #e63082;
