--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding-top: 4.5rem;
   padding-bottom: 4.5rem;
-  background-color: lighten($main-bgc, 5%);
+  background-color: $c-black-l2;
 
   a {
     color: rgba($main-color, .5);
