--- a/app/template/_mixin.jade
+++ b/app/template/_mixin.jade
@@ -14,3 +14,15 @@ mixin sns-twitter(url)
   a.share-btn.share-btn--twitter(href=url, title="分享至 Twitter")
     +svg-icon('sns-twitter')
 
+mixin talk-header()
+  h1.clear
+    .share-btns.float-right
+      +sns-facebook('###')
+      +sns-twitter('###')
+
+mixin talk-title($talkOrder, $talkGuest, $talkTitle)
+  .talk-title.clear
+    .talk__num.pr2.text-pink= $talkOrder
+    .talk__hd
+      .talk__guest.text-pink= $talkGuest
+      h1.talk__title= $talkTitle
