add pagination component style & structure

--- a/app/template/_talk-layout.jade
+++ b/app/template/_talk-layout.jade
@@ -44,6 +44,8 @@ block content
             .block__content
               block talk-polis
 
-      ul.pagination.list-reset
-        li: a.pagination__prev(href="###") 上一集節目
-        li: a.pagination__next(href="###") 下一集節目
+      ul.pagination.list-reset.text-center.pb6.mb6
+        li.pagination__item
+          a.pagination__link.pagination__link--prev.px2(href="###") 上一集節目
+        li.pagination__item
+          a.pagination__link.pagination__link--next.px2(href="###") 下一集節目
