修正 talk links 間距

--- a/app/styles/_c-video.scss
+++ b/app/styles/_c-video.scss
@@ -115,7 +115,7 @@
     padding: 2px;
     transition: all .25s;
 
-    @include bp-lg--up {
+    @include bp-md--up {
       padding: 3px .75rem;
     }
 
