--- a/app/styles/_c-slider.scss
+++ b/app/styles/_c-slider.scss
@@ -8,7 +8,7 @@
   z-index: 5;
   font-size: 1.5rem;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     top: 1em;
   }
 
@@ -23,7 +23,7 @@
     height: auto;
     pointer-events: none;
 
-    @include bp-pad--up {
+    @include bp-md--up {
       max-width: none;
     }
   }
@@ -84,7 +84,7 @@
   @include fill-full;
   background-image: linear-gradient(to bottom, transparent, rgba($main-bgc, .1), $main-bgc);
 
-  @include bp-pad--up {
+  @include bp-md--up {
     background: rgba($main-bgc, .25);
   }
 }
@@ -96,7 +96,7 @@
   line-height: px2rem(36);
   font-weight: 900;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     bottom: px2rem(36);
     right: px2rem(24);
     line-height: px2rem(36);
@@ -107,14 +107,14 @@
   font-size: px2rem(18);
   letter-spacing: .1em;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     font-size: px2rem(21);
   }
 }
 .program__title {
   font-size: px2rem(28);
 
-  @include bp-pad--up {
+  @include bp-md--up {
     font-size: px2rem(48);
     line-height: px2rem(60);
   }
@@ -132,7 +132,7 @@
   color: inherit;
   background-color: $c-pink;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     margin-top: px2rem(12);
     font-size: px2rem(18);
     line-height: px2rem(42);
@@ -145,12 +145,12 @@
   .program__link + & {
     margin-top: px2rem(-44);
 
-    @include bp-pad--up {
+    @include bp-md--up {
       margin-top: px2rem(-64);
     }
   }
 
-  @include bp-pad--up {
+  @include bp-md--up {
     font-size: px2rem(96);
   }
 }
@@ -185,7 +185,7 @@
   background-size: cover;
   counter-increment: program;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     width: calc(100% / 5);
   }
 
