--- a/app/styles/_p-talk.scss
+++ b/app/styles/_p-talk.scss
@@ -17,7 +17,7 @@
 .logo--talk {
   display: block;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     width: 6rem;
   }
 
@@ -27,7 +27,7 @@
 }
 
 .logo-text--talk {
-  @include bp-pad--up {
+  @include bp-md--up {
     width: px2rem(244 * .75);
   }
 
@@ -45,7 +45,7 @@
   left: -2px;
   font: 900 4rem / (9 / 8) $number-font;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     float: left;
     font-size: 4.5rem;
     line-height: (7 / 6);
@@ -71,7 +71,7 @@
   font-size: 1.5rem;
   line-height: 1.25;
 
-  @include bp-pad--up {
+  @include bp-md--up {
     font-size: 2rem;
     line-height: 1.125;
   }
@@ -100,7 +100,7 @@
 }
 
 .point-list {
-  @include bp-pad--up {
+  @include bp-md--up {
     padding-left: 4.5rem;
   }
 }
@@ -117,7 +117,7 @@
     font: 300 px2rem(40) / 1 $number-font;
     color: $c-pink;
 
-    @include bp-pad--up {
+    @include bp-md--up {
       position: absolute;
       left: -4.5rem;
       width: 56px;
