--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -13,7 +13,7 @@ $_gutter: px2rem(18);
     padding-right: 1.5rem;
   }
 
-  @include bp-desktop--up {
+  @include bp-lg--up {
     max-width: px2rem(1176);
     padding-left: 3rem;
     padding-right: 3rem;
@@ -21,13 +21,13 @@ $_gutter: px2rem(18);
 }
 
 .main-content {
-  @include bp-desktop--up {
+  @include bp-lg--up {
     lost-column: 7/12 0 #{$_gutter*2} no-flex;
   }
 }
 
 .side-content {
-  @include bp-desktop--up {
+  @include bp-lg--up {
     lost-column: 5/12 0 #{$_gutter*2} no-flex;
   }
 }
