調整 video component 結構

--- a/app/talk/01.jade
+++ b/app/talk/01.jade
@@ -12,6 +12,7 @@ block talk-header
 
 block video-block
   section.video.mb4.lg-mb6
+    .posr
     .talk-nav
       a.talk-nav__link.talk-nav__link--next(href="###")
         .talk-nav__info(style="background-image: url('/images/slider/program02_icon.jpg')")
@@ -22,12 +23,13 @@ block video-block
           span.ib.talk-nav__info__num.pr1 02
           span.ib.talk-nav__info__topic 產業
     .container
-      .video--inner
+      .posr
         .video-cover.full-fill(style="background-image: url('/images/slider/program01_bg.jpg');")
           .video-cover__icon-play 精華回顧
         .video-box.mb4.md-mb2.mxa
           .video-placeholder
           //- iframe.video-iframe.fill-full(src="https://www.youtube.com/embed/EGfermw3XQk", frameborder="0", width="560", height="315")
+    .container
         ul.video-links.list-reset
             li.video-links__item
               a(href='###').video-link
