--- a/app/template/_mixin.jade
+++ b/app/template/_mixin.jade
@@ -15,6 +15,14 @@ mixin sns-twitter(url)
     +svg-icon('sns-twitter')
 
 mixin talk-header()
+mixin talk-nav__link($type, $programData)
+  a.talk-nav__link(
+    class="talk-nav__link--#{$type}",
+    href="/talk/#{$programData.program_number_full}.html")
+    .talk-nav__info(style="background-image: url('/images/slider/program#{$programData.program_number_full}_icon.jpg')")
+      span.ib.talk-nav__info__num.pr1= $programData.program_number_full
+      span.ib= $programData.program_topic
+
   h1.clear
     .share-btns.float-right
       +sns-facebook('###')
