將特殊大字樣式調為公用樣式
套用至首頁與最後一集

--- a/app/styles/_c-block.scss
+++ b/app/styles/_c-block.scss
@@ -35,6 +35,12 @@
     max-width: 90%;
   }
 
+  &.block__content--large {
+    @include bp-lg--up {
+      font-size: 1.5rem;
+    }
+  }
+
   p {
     letter-spacing: .05em;
   }
