--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -13,7 +13,7 @@ $c-black-l3: lighten($c-black, 13.5%);
 $c-white-o5: rgba($c-white, .5);
 
 $main-bgc: $c-black-l1;
-$main-color: $c-white;1
+$main-color: $c-white;
 
 // breakpoint
 $grid-breakpoints: (
