--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -1,6 +1,6 @@
 section.slider.mxa
-  h1.slider-head
-    .container
+  h1.slider-head.vh
+    .container.vv
       img.logo.logo--index.float-right(src="/images/logo/logo.svg", alt="政問 logo", width="102", height="128")
       .share-btns.float-left
         +sns-facebook('###')
@@ -9,15 +9,16 @@ section.slider.mxa
   .slider-body
     each program, index in programs
       if program.program_topic
-        div.slider-content(style="background-image: url('/images/slider/program#{program.program_number_full}_thumb.jpg')")
-          a.slider-link(href="/talk/#{program.program_number_full}.html")
+        a.slider-content(
+          href="/talk/#{program.program_number_full}.html",
+          style="background-image: url('/images/slider/program#{program.program_number_full}_thumb.jpg'); background-position: #{program.bg_position ? program.bg_position : '50% 50%'};")
           .container
             .program-info
               .program__guest.text-pink=program.guest
-              .program__title!=program.title.replace(/，/, '<br>')
+              .program__title!=program.title.replace(/，/g, '<br>').replace(/&#8203;/g, '<br>')
               time.program__time.text-gray 12 月 23 日（三）21:00 – 21:30
               if allPoints['point' + program.program_number_full + '.json']
-                a.program__link.px3(href="/talk/#{program.program_number_full}.html", title="觀看節目彙整 →") 觀看節目彙整 →
+                .program__link.px3(href="/talk/#{program.program_number_full}.html", title="觀看節目彙整 →") 觀看節目彙整 →
               .program__number.text-pink.text-right=program.program_number_full
 
   .slider-foot.mxa
