將不全的 program 篩除

--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -1,3 +1,6 @@
+//- filter empty program
+- programs = programs.filter((p) => p.program_topic);
+
 section.slider.mxa
   h1.slider-head.vh
     .container.vv
