--- a/app/template/_slider.jade
+++ b/app/template/_slider.jade
@@ -12,9 +12,12 @@ section.slider.mxa
   .slider-body
     each program, index in programs
       if program.program_topic
+        - var bgi = `url('/images/slider/program${program.program_number_full}_thumb.jpg')`;
+        - var bgp = program.bg_position && `background-position: ${program.bg_position};`;
+
         a.slider-content(
           href="/talk/#{program.program_number_full}.html",
-          style="background-image: url('/images/slider/program#{program.program_number_full}_thumb.jpg'); background-position: #{program.bg_position ? program.bg_position : '50% 50%'};")
+          style="background-image: #{bgi}; #{bgp}")
           .container
             .program-info
               .program__guest.text-pink=program.guest
