--- a/app/template/_talk-layout.jade
+++ b/app/template/_talk-layout.jade
@@ -82,7 +82,7 @@ block content
                       p.point-item__desc!= point.desc.replace(/\n/mg, '<br><br>')
 
         if _talk.polis
-          aside.side-content.c-polis
+          aside.side-content.c-polis.pb4
             .block
               h4.block__title
                 span.title-en polis
