--- a/app/styles/_c-polis.scss
+++ b/app/styles/_c-polis.scss
@@ -6,18 +6,21 @@
 }
 
 .polis {
-  display: table;
   display: none;
   width: 100%;
   margin-bottom: px2rem(6);
   background-color: mix(#fff, #000, 20);
   font-size: px2rem(13);
   line-height: px2rem(24);
-  opacity: 0;
-  transition: opacity 1s;
 
   &.is-show {
-    opacity: 1;
+    display: table;
+    animation: fadein 1s forwards;
+
+    @keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
   }
 }
 
@@ -53,9 +56,9 @@
   .data {
     stroke-width: 3px;
     fill: transparent;
-    animation: sss 1.5s linear forwards paused;
+    animation: sss 1.5s forwards paused;
 
-    .polis.is-visible & {
+    .polis.is-show & {
       animation-play-state: running;
     }
   }
@@ -63,6 +66,15 @@
   .base {
     stroke: $c-gray;
     animation-delay: 1.5s;
+    animation-duration: 1s;
+    transition: opacity .3s;
+    opacity: .2;
+
+    @at-root {
+      .polis__chart:hover .base {
+        opacity: .1;
+      }
+    }
   }
 
   .data {
