加一個 animation 支援度判斷，保持 svg chart 可識別

--- a/app/styles/_c-polis.scss
+++ b/app/styles/_c-polis.scss
@@ -58,6 +58,10 @@
     fill: transparent;
     animation: svg-dash-anim 1.5s forwards paused;
 
+    .no-animation & {
+      stroke-dashoffset: 0;
+    }
+
     .polis.is-show & {
       animation-play-state: running;
     }
